Enhance frontend with centered button, loading indicator, redirect, and optimize color/image loading

--- a/animosic_frontend/connect_spotify.html
+++ b/animosic_frontend/connect_spotify.html
@@ -20,7 +20,7 @@
                     <h1 style="font-size: 2.4rem;">Connect Spotify</h1>
                 </div>
             </div>
-            <img src="assets/cassette.png" alt="cassette Image" class="welcome-image">
+            <img src="assets/cassette.webp" alt="cassette Image" class="welcome-image">
         </div>
 
         <button style="display: flex;" class="begin-button" onclick="window.location.href= 'http://127.0.0.1:8000/login' ">Connect to Spotify</button>
