--- a/animosic_frontend/index.html
+++ b/animosic_frontend/index.html
@@ -23,7 +23,7 @@
                 <h1 class="animosic-title">Ánimosic</h1>
                 <p><span style="color: #3EB7B2;">A Mood-Based </span> Music Playlist Generator</p>
             </div>
-            <img src="assets/cassette.png" alt="cassette Image" class="welcome-image">
+            <img src="assets/cassette.webp" alt="cassette Image" class="welcome-image">
         </div>
 
         <div class="steps-container">
