--- a/animosic_frontend/mood.html
+++ b/animosic_frontend/mood.html
@@ -17,7 +17,7 @@
                 <div class="step-label"><span style="color: #3EB7B2;">Step</span> 2</div>
                 <h1>Select your current mood</h1>
             </div>
-            <img src="assets/cassette.png" alt="cassette Image" class="mood-image">
+            <img src="assets/cassette.webp" alt="cassette Image" class="mood-image">
         </div>
         <div class="mood-list">
             <div class="mood-item" data-mood="Focus/Study" data-color="#033F63">
