--- a/animosic_frontend/genre_artist.html
+++ b/animosic_frontend/genre_artist.html
@@ -5,7 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animosic - Select Genre and Artist</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preload" href="assets/singer.webp" as="image">
     <link href="https://fonts.googleapis.com/css2?family=Flamenco:wght@400&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #278783;
+        }
+        /* Preload mood color from localStorage */
+        :root {
+            --mood-color: #278783;
+        }
+        body {
+            background-color: var(--mood-color);
+        }
+        header {
+            background-color: var(--mood-color);
+        }
+    </style>
+    <script>
+        // Set initial mood color before DOM loads
+        document.addEventListener('DOMContentLoaded', () => {
+            const moodColor = localStorage.getItem('moodColor') || '#278783';
+            document.documentElement.style.setProperty('--mood-color', moodColor);
+            document.body.style.backgroundColor = moodColor;
+            document.querySelector('header').style.backgroundColor = moodColor;
+        });
+    </script>
 </head>
 <body>
     <div class="background-equalizer">
@@ -39,7 +64,7 @@
                     <div id="artist-list" class="artist-list"></div>
                 </div>
             </div>
-            <img src="assets/singer.png" alt="Singer Image" class="genre-artist-image">
+            <img src="assets/singer.webp" alt="Singer Image" class="genre-artist-image">
         </div>
         <button id="generate-button" style="display: none;" onclick="goToNamePlaylist()">Generate Playlist</button>
     </div>
