--- a/animosic_frontend/playlist.html
+++ b/animosic_frontend/playlist.html
@@ -6,6 +6,30 @@
     <title>Animosic - Your Playlist</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Flamenco:wght@400&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #278783;
+        }
+        /* Preload mood color from localStorage */
+        :root {
+            --mood-color: #278783;
+        }
+        body {
+            background-color: var(--mood-color);
+        }
+        header {
+            background-color: var(--mood-color);
+        }
+    </style>
+    <script>
+        // Set initial mood color before DOM loads
+        document.addEventListener('DOMContentLoaded', () => {
+            const moodColor = localStorage.getItem('moodColor') || '#278783';
+            document.documentElement.style.setProperty('--mood-color', moodColor);
+            document.body.style.backgroundColor = moodColor;
+            document.querySelector('header').style.backgroundColor = moodColor;
+        });
+    </script>
 </head>
 <body>
     <div class="background-equalizer">
@@ -26,7 +50,10 @@
         <div class="step-label"><span style="color: #3EB7B2;">Step</span> 4</div>
         <h1 id="playlist-title"></h1>
         <div id="track-list" class="track-list"></div>
-        <button onclick="addToSpotify()">Add to Spotify</button>
+        <div class="button-container" style="text-align: center; margin-top: 20px;">
+            <button id="add-to-spotify-button" onclick="addToSpotify()">Add to Spotify</button>
+            <span id="loading-message" style="display: none; margin-left: 10px;">Adding...</span>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
